--- a/.gitignore
+++ b/.gitignore
@@ -34,8 +34,8 @@ bld/
 [Ll]ogs/
 
 # Visual Studio 2015/2017 cache/options directory
-./.vs/
-./x64/
+./GRAPHIX-MCO/.vs/
+./GRAPHIX-MCO/x64/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
