--- a/GRAPHIX-MCO/GRAPHIX-MCO.vcxproj.filters
+++ b/GRAPHIX-MCO/GRAPHIX-MCO.vcxproj.filters
@@ -55,5 +55,7 @@
     <CopyFileToFolders Include="Shader\2txtModel.vert" />
     <CopyFileToFolders Include="Shader\5txtModel.frag" />
     <CopyFileToFolders Include="Shader\5txtModel.vert" />
+    <CopyFileToFolders Include="Shader\notxtModel.frag" />
+    <CopyFileToFolders Include="Shader\notxtModel.vert" />
   </ItemGroup>
 </Project>
